<resources>
    <string name="app_name">AndroidClient</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱地址/手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register">注册</string>
    <string name="error_invalid_email">邮箱地址格式错误</string>
    <string name="error_invalid_password">密码不合法</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">该行不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_bar_hint">搜索题目或试卷</string>
    <string name="title_activity_subject_detail">SubjectDetailActivity</string>
    <string name="action_settings">Settings</string>

    <string name="subject_intro_test">物理学是研究物质运动最一般规律和物质基本结构的学科。作为自然科学的带头学科，物理学研究大至宇宙，小至基本粒子等一切物质最基本的运动形式和规律，因此成为其他各自然科学学科的研究基础。</string>
</resources>
